2002-05-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: GSFromUnicode(), GSToUnicode(), bugfix - ensure
	that returned memory is allocated from specified zone, rather than
	returning internal buffer.

2002-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Don't try to release memory using free()
	when it was allocated using NSZoneMalloc().
	* Tools/autogsdoc.m: Improve dependency rule management.
	* Tools/AGSParser.h: ditto
	* Tools/AGSParser.m: ditto
	* Tools/AGSIndex.h: ditto
	* Tools/AGSIndex.m: ditto
	Store all dependency information in the .igsdoc file and keep it up
	to date.  Never regenerate a file that doesn't need it.
	Mostly the changes are to cope with the fact that we now have
	common files into which all functions, constants, variables, and
	typedefs within a project are combined.

2002-05-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Rationalise so that all conversion operations
	go through the two new functions.  Gets rid of a load of old code.
	* Source/GSString.m: ([-replaceCharactersInRange:withString:])
	minor performance enhancement when copying from a 16-bit string
	to an 8-bit string.

2002-05-10  Adam Fedor  <fedor@gnu.org>

	* Source/Additions/GSXML.m: Change libxml strings to UTF8
	(makeText:) New.
	Add GSXMLDummy for MinGW
	* Source/Additions/libgnustep-base.def: Remove GSXMLHandler.
	(patch from Kai Henningsen).

2002-05-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdnc.m: Make gdnc log to syslog by default, and close
	stdin, stdout, stderr to run as daemon.
	* Source/NSUser.m: Restructured path generation code slightly.
	Added support for system-wide .GNUsteprc with force options.
	Removed use of FORCE_USER_ROOT and FORCE_DEFAULTS_ROOT
	* Source/Base/gsdoc: Document the .GNUsteprc files.
	* Source/NSArray.m: Fix bug with GC pointed out by James Knight

2002-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Insert port information to URL passed